# Heisenberg

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Dependence/: CMakeLists.txt
Dependence/FFmpeg/: CMakeLists.txt
Dependence/FFmpeg/windows/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc
Dependence/Lcms2/: CMakeLists.txt
Dependence/Lcms2/debug/lib/: lcms2.lib
Dependence/Lcms2/debug/lib/pkgconfig/: lcms2.pc
Dependence/Lcms2/include/: lcms2.h
Dependence/Lcms2/lib/pkgconfig/: lcms2.pc
Dependence/LibPlacebo/: CMakeLists.txt
Dependence/LibPlacebo/windows/include/libplacebo/: config.h
Dependence/LibPlacebo/windows/lib/: libplacebo.lib
Dependence/SpdLog/: CMakeLists.txt
Dependence/SpdLog/windows/debug/lib/: spdlogd.lib
Dependence/SpdLog/windows/include/spdlog/: tweakme.h
Dependence/SpdLog/windows/include/spdlog/sinks/: win_eventlog_sink.h  wincolor_sink.h
Dependence/SpdLog/windows/lib/: spdlog.lib
Dependence/Volk/: CMakeLists.txt
Dependence/Volk/debug/lib/: volk.lib
Dependence/Volk/lib/: volk.lib
Dependence/Vulkan/: CMakeLists.txt
Dependence/Vulkan/windows/debug/lib/: vulkan-1.lib
Previewer/: CMakeLists.txt
Previewer/Common/: Codec.hpp  Packet.cpp  Packet.hpp  Stream.hpp
Previewer/Decoder/: CudaDecoder.cpp  CudaDecoder.hpp  D3D11Decoder.cpp  D3D11Decoder.hpp  DecoderFactory.cpp  DecoderFactory.hpp  HwTransfer.cpp  HwTransfer.hpp  IDecoder.hpp  SoftwareDecoder.cpp  SoftwareDecoder.hpp
Previewer/Demuxer/: Demuxer.cpp  Demuxer.hpp  DemuxerFactory.cpp  DemuxerFactory.hpp  IDemuxer.hpp
Previewer/Render/: GpuContext.cpp  GpuContext.hpp  RenderEngine.cpp  RenderEngine.hpp  SwapChain.cpp  SwapChain.hpp  VulkanContext.cpp  VulkanContext.hpp
UserInterface/: CMakeLists.txt  main.cpp  qml.qrc
UserInterface/Backend/: ColorGradeModel.cpp  ColorGradeModel.hpp  MediaInfoProvider.cpp  MediaInfoProvider.hpp  MediaPoolModel.cpp  MediaPoolModel.hpp  PlayerController.cpp  PlayerController.hpp  ScopeDataProvider.cpp  ScopeDataProvider.hpp
UserInterface/Qml/: ColorGradingPane.qml  Main.qml  MediaInfoPane.qml  MediaPoolPane.qml  ScopesPane.qml  ViewerPane.qml
UserInterface/Qml/Controls/: ColorWheel.qml  CurvesEditor.qml  PlaybackBar.qml
Utiles/: CMakeLists.txt  Logger.cpp  Logger.hpp
